add entity